--- a/tech-website/style/feedback.scss
+++ b/tech-website/style/feedback.scss
@@ -31,7 +31,7 @@
     @include flex(column);
     align-items: center;
     width: 19rem;
-    height: 22rem;
+    height: 20rem;
     box-shadow: .2px .2px 12px .2px #00072d;
     border:4px solid #3503b7;
     padding:25px 12px 5px 12px;
@@ -43,6 +43,23 @@
   }
   .feedback-div p{
     line-height: 30px;
+  }
+  .feedback-name-div{
+    @include flex(row);
+    justify-content: flex-end;
+    font-size: .8rem;
+
+  }
+
+  .feedback-name-div p{
+    margin-top: -5px;
+  }
+  .icons-container{
+    margin-top: -15px;
+  }
+
+  ion-icon{
+    color: white;
   }
 
 }
