--- a/tech-website/style/header.scss
+++ b/tech-website/style/header.scss
@@ -48,9 +48,13 @@ header {
         list-style: none;
     }
     a{
+        font-size: 1.05rem;
+        border-radius: 4px;
+        padding:5px 12px 5px 12px;
+        font-family: 'Montserrat';
         text-decoration: $noTextUnderline;
        &:hover{
-            background: black;
+            background: #6f0fbd;
         }
     }
 
@@ -76,16 +80,25 @@ background:$whiteColor; }
     .subscribe-div{
         margin-top: 50px;
         input{
-            width: 50%;
-            padding:2px 12px 2px 5px;
+            outline: none;
+            width: 60%;
+            padding:2px 15px 2px 15px;
             box-shadow: .2px .2px 4px .2px white;
             border: $noBorder;
+            &:focus{
+                transition: .2s;
+                border:2px solid #0556bb;
+                box-shadow: .2px .2px 4px .2px #0556bb;
+            }
         }
         input::placeholder{
             font-family: 'Montserrat';
         }
         button{
-            padding:4px 17px 4px 17px;
+            border-top-left-radius: 0px;
+            border-bottom-left-radius: 0px;
+            margin-left: -40px;
+            padding:6px 17px 6px 17px;
         }
     }
 
@@ -139,9 +152,15 @@ h3{
     z-index:+1;
     width: 10rem;
     height: 10rem;
-    background:$purpleColor;
+    background: $purpleColor;
     box-shadow: .2px .2px 12px .2px black;
     border-radius: 8px;
+
+    &:hover{
+        cursor: $cursorButton;
+        background: #30046b;
+    }
+
     img{
         margin:10px 0px 0px 30px;
         width: 6.2rem;
