--- a/tech-website/style/body.scss
+++ b/tech-website/style/body.scss
@@ -4,8 +4,7 @@ body {
     padding: 0;
 }
 .line{
-    background: black;
-    width:20% ;
+    width:25% ;
     height: .2rem;
 }
 
@@ -16,4 +15,9 @@ body::-webkit-scrollbar{
 body::-webkit-scrollbar-thumb{
     background: #001a4b;
     height: 3rem;
+}
+
+.border{
+    border:1px solid black;
+    background: black;
 }
