--- a/tech-website/style/body.scss
+++ b/tech-website/style/body.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 body {
     font-family: 'Montserrat';
     margin: 0;
@@ -18,6 +20,48 @@ body::-webkit-scrollbar-thumb{
 }
 
 .border{
-    border:1px solid black;
-    background: black;
+    border:1px solid  $blackColor;
+    background: $blackColor;
 }
+
+
+.create-account{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:30px;
+    z-index: +1;
+    width: 100%;
+    height: 44.6rem;
+    background: white;
+    color:white;
+    position: fixed;
+    top:0%;
+    animation: createAccount .5s ease-in-out;
+}
+
+.create-account-input{
+    border:1px solid transparent;
+    border-radius: 4px;
+    outline:none;
+    padding:7px 12px 7px 12px;
+    width: 30%;
+    box-shadow: .2px .2px 14px .2px lightgray;
+}
+
+@keyframes createAccount{
+    0%{
+        background:lightgray;
+        opacity: 0;
+        top: 100%;
+    }
+
+    100%{
+        top: 0%;
+        background:  $whiteColor;
+        opacity: 1;
+
+    }
+}
+
+
