--- a/tech-website/style/style.css
+++ b/tech-website/style/style.css
@@ -23,6 +23,42 @@ body::-webkit-scrollbar-thumb {
   background: black;
 }
 
+.create-account {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  z-index: 1;
+  width: 100%;
+  height: 44.6rem;
+  background: white;
+  color: white;
+  position: fixed;
+  top: 0%;
+  animation: createAccount 0.5s ease-in-out;
+}
+
+.create-account-input {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  outline: none;
+  padding: 7px 12px 7px 12px;
+  width: 30%;
+  box-shadow: 0.2px 0.2px 14px 0.2px lightgray;
+}
+
+@keyframes createAccount {
+  0% {
+    background: lightgray;
+    opacity: 0;
+    top: 100%;
+  }
+  100% {
+    top: 0%;
+    background: white;
+    opacity: 1;
+  }
+}
 nav, ul, .header-content, .button-container, .subscribe-div, .service-section {
   display: flex;
   flex-direction: row;
