--- a/tech-website/style/header.scss
+++ b/tech-website/style/header.scss
@@ -53,7 +53,7 @@ header {
         padding:5px 12px 5px 12px;
         font-family: 'Montserrat';
         text-decoration: $noTextUnderline;
-       &:hover{
+        &:hover{
             background: #6f0fbd;
         }
     }
@@ -64,7 +64,8 @@ header {
         height: auto;
     }
     .line{
-background:$whiteColor; }
+        background:$whiteColor;
+    }
 }
 
 .header-content{
@@ -103,10 +104,8 @@ background:$whiteColor; }
     }
 
     .button-container{
-      margin-top: 60px;
+        margin-top: 60px;
     }
-
-
 
 }
 
@@ -114,16 +113,16 @@ button{
     box-shadow: .2px .2px 12px .2px #56009d;
     border-radius: 4px;
     font-size:1rem;
+    background:$purpleColor;
     font-family: 'Montserrat';
     padding:7px 14px 7px 14px;
     border:none;
-    background:$purpleColor;
 
     &:hover{
+        color:$blackColor;
         cursor: $cursorButton;
         transition:$transitionButton;
-        background: $backgroundWhiteColor;
-        color:black;
+        background:$whiteColor;
     }
 }
 
@@ -147,29 +146,32 @@ h3{
 .service-section{
     justify-content: center;
     margin-top:-50px ;
+    background: linear-gradient(to left,#001d49, #040028);
+    height: 35vh;
 
-.service-section-box{
-    z-index:+1;
-    width: 10rem;
-    height: 10rem;
-    background: $purpleColor;
-    box-shadow: .2px .2px 12px .2px black;
-    border-radius: 8px;
+    .service-section-box{
+        z-index:+1;
+        width: 10rem;
+        height: 10rem;
+        background: $purpleColor;
+        border-radius: 8px;
+        margin-top: 20px;
 
-    &:hover{
-        cursor: $cursorButton;
-        background: #30046b;
-    }
 
-    img{
-        margin:10px 0px 0px 30px;
-        width: 6.2rem;
-        height: auto;
+        &:hover{
+            cursor: $cursorButton;
+            background: #30046b;
+        }
+
+        img{
+            margin:10px 0px 0px 30px;
+            width: 6.2rem;
+            height: auto;
+        }
+        p{
+            margin: 5px;
+            text-align: center;
+        }
     }
-    p{
-        margin: 5px;
-        text-align: center;
-    }
-}
 
 }
