--- a/tech-website/style/style.css
+++ b/tech-website/style/style.css
@@ -177,16 +177,16 @@ button {
   box-shadow: 0.2px 0.2px 12px 0.2px #56009d;
   border-radius: 4px;
   font-size: 1rem;
+  background: linear-gradient(to left, #7a08d3, #8110b0);
   font-family: "Montserrat";
   padding: 7px 14px 7px 14px;
   border: none;
-  background: linear-gradient(to left, #7a08d3, #8110b0);
 }
 button:hover {
+  color: black;
   cursor: pointer;
   transition: 0.3s;
   background: white;
-  color: black;
 }
 
 h3 {
@@ -207,14 +207,16 @@ h3 {
 .service-section {
   justify-content: center;
   margin-top: -50px;
+  background: linear-gradient(to left, #001d49, #040028);
+  height: 35vh;
 }
 .service-section .service-section-box {
   z-index: 1;
   width: 10rem;
   height: 10rem;
   background: linear-gradient(to left, #7a08d3, #8110b0);
-  box-shadow: 0.2px 0.2px 12px 0.2px black;
   border-radius: 8px;
+  margin-top: 20px;
 }
 .service-section .service-section-box:hover {
   cursor: pointer;
