--- a/tech-website/style/header.scss
+++ b/tech-website/style/header.scss
@@ -146,14 +146,15 @@ h3{
 .service-section{
     justify-content: center;
     margin-top:-50px ;
-    background: linear-gradient(to left,#001d49, #040028);
-    height: 35vh;
+    background: linear-gradient(to left, #001738, #170026);
+    height: 28vh;
 
     .service-section-box{
         z-index:+1;
-        width: 10rem;
-        height: 10rem;
-        background: $purpleColor;
+        width: 9.5rem;
+        height: 8rem;
+        background: linear-gradient(to left, #17003d, #200042);
+        box-shadow: .2px .2px 12px .2px #09002c;
         border-radius: 8px;
         margin-top: 20px;
 
@@ -163,10 +164,10 @@ h3{
             background: #30046b;
         }
 
-        img{
-            margin:10px 0px 0px 30px;
-            width: 6.2rem;
-            height: auto;
+        ion-icon{
+            margin:10px 0px 0px 43px;
+            font-size: 4.3rem;
+            color: #856aff;
         }
         p{
             margin: 5px;
