--- a/tech-website/style/body.scss
+++ b/tech-website/style/body.scss
@@ -1,123 +1,155 @@
 @import "variables";
 
-@mixin flexDirection($direction){
-    display: flex;
-    flex-direction: $direction;
+@mixin flexDirection($direction) {
+  display: flex;
+  flex-direction: $direction;
 }
 
 body {
-    font-family: 'Montserrat';
-    margin: 0;
-    padding: 0;
-}
-.line{
-    width:25% ;
-    height: .2rem;
+  font-family: 'Montserrat';
+  margin: 0;
+  padding: 0;
 }
 
-body::-webkit-scrollbar{
-    background: #3c3cf3;
+.line {
+  width: 25%;
+  height: .2rem;
 }
 
-body::-webkit-scrollbar-thumb{
-    background: #001a4b;
-    height: 3rem;
+body::-webkit-scrollbar {
+  background: #3c3cf3;
 }
 
-.border{
-    border:1px solid  $blackColor;
-    background: $blackColor;
+body::-webkit-scrollbar-thumb {
+  background: #001a4b;
+  height: 3rem;
 }
 
-.create-account,.remove-create-account-icon-div{
-    display: flex;
+.border {
+  border: 1px solid $blackColor;
+  background: $blackColor;
 }
 
-.create-account{
-    flex-direction: column;
-    align-items: center;
-    gap:30px;
-    z-index: +1;
-    width: 100%;
-    height: 44.6rem;
-    background: white;
-    color:white;
-    position: fixed;
-    top:0%;
-    animation: createAccount .5s ease-in-out;
+.create-account, .remove-create-account-icon-div {
+  display: flex;
 }
 
-.create-account-input{
-    border:1px solid transparent;
-    border-radius: 4px;
-    outline:none;
-    padding:7px 12px 7px 12px;
-    width: 30%;
-    box-shadow: .2px .2px 14px .2px lightgray;
+.create-account {
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  z-index: +1;
+  width: 100%;
+  height: 44.6rem;
+  background: white;
+  color: white;
+  position: fixed;
+  top: 0%;
+  animation: createAccount .5s ease-in-out;
 }
 
-.remove-create-account-icon-div{
-    margin: 50px 0px 0px 10px;
-    flex-direction: row;
-    justify-content: flex-end;
+.create-account-input {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  outline: none;
+  padding: 7px 12px 7px 12px;
+  width: 30%;
+  box-shadow: .2px .2px 14px .2px lightgray;
+}
+
+.remove-create-account-icon-div {
+  margin: 50px 0px 0px 10px;
+  flex-direction: row;
+  justify-content: flex-end;
 
 
 }
 
-@keyframes createAccount{
-    0%{
-        background:lightgray;
-        opacity: 0;
-        top: 100%;
+@keyframes createAccount {
+  0% {
+    background: lightgray;
+    opacity: 0;
+    top: 100%;
+  }
+
+  100% {
+    top: 0%;
+    background: $whiteColor;
+    opacity: 1;
+
+  }
+}
+
+
+.top-button {
+  box-shadow: .2px .2px 4px .2px $purpleColor;
+  position: fixed;
+  left: 96%;
+  top: 93%;
+
+}
+
+.nav-bar-button {
+  position: fixed;
+  left: 1%;
+  top: 93%;
+}
+
+.show-nav-bar {
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  width: 100%;
+  height: 50rem;
+  z-index: +1;
+  background: linear-gradient(to left, #001738, #170026);
+  animation: showNavBar .3s ease-in-out;
+
+  @keyframes showNavBar {
+
+    0% {
+      background: #70a3ff;
+      transform: scale(.3) translateY(180px);
+      opacity: 0;
     }
 
-    100%{
-        top: 0%;
-        background:  $whiteColor;
-        opacity: 1;
-
+    100% {
+      box-shadow: 0 0 0 rgba(0, 0, 0, 1);
+      transform: translateY(0px);
+      opacity: 1;
     }
-}
+  }
 
-
-.top-button{
-    box-shadow: .2px .2px 4px .2px $purpleColor;
-    position: fixed;
-    left:96%;
-    top:93%;
-
-}
-
-.nav-bar-button{
-    position: fixed;
-    left:1%;
-    top:93%;
-}
-
-.show-nav-bar{;
-    position: fixed;
-    left:0%;
-    top:0%;
-    width: 100%;
-    height: 50rem;
-    z-index: +1;
-    background: #02213b;
-.nav-bar{
+  .nav-bar {
     margin-top: 50px;
-@include flexDirection(column);
-   justify-content: center;
+    @include flexDirection(column);
+    justify-content: center;
 
-}ul{
+  }
+
+  ul {
     margin-left: -30px;
     align-items: center;
-     justify-content: center;
+    justify-content: center;
 
-     @include flexDirection(column);
- }
-    li{
-list-style: none;
-    }a{
+    @include flexDirection(column);
+  }
+
+  li {
+    list-style: none;
+  }
+
+  a {
     font-size: 1.3rem;
-             text-decoration: $noTextUnderline;
-         }
+    text-decoration: $noTextUnderline;
+  }
+  .button{
+    border-radius: 4px;
+    padding:7px 14px 7px 14px;
+
+    &:hover{
+      box-shadow: .2px .2px 12px .2px #56009d;
+      background:$purpleColor;
+    }
+  }
 }
