--- a/tech-website/style/style-responsive.css
+++ b/tech-website/style/style-responsive.css
@@ -1,7 +1,8 @@
 @media screen and (max-width: 704px) {
-  .plans-container {
+  .plans-section .plans-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
 }
 
