updating mobile view

--- a/tech-website/style/accessibility.scss
+++ b/tech-website/style/accessibility.scss
@@ -22,16 +22,18 @@
     }
   }
 
+
+
   .accessibility-div {
     img {
-      width: 25rem;
+      width: 23rem;
       height: auto;
       margin-top: -40px;
     }
 
     p {
       margin-top: -45px;
-      font-size: 1.1rem;
+      font-size: .9rem;
       text-align: center;
       line-height: 30px;
       color: $blackColor;
